--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-#/node_modules
+/node_modules
 /public/hot
 /public/storage
 /storage/*.key
@@ -9,5 +9,5 @@
 docker-compose.override.yml
 Homestead.json
 Homestead.yaml
-#npm-debug.log
+npm-debug.log
 yarn-error.log
